[package]
name = "RusticFourier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
num = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
itertools = "0.13.0"
ndarray = { version = "0.16.1", optional = true }

[dev-dependencies]
ndarray = "0.16.1"
plotters = "0.3.7"
smallvec = "1.13.2"

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray"]

