[package]
name = "rufft"
version = "0.1.0"
edition = "2021"

[dependencies]
num-integer = { version = "0.1.46", default-features = false }
itertools = "0.13.0"
ndarray = { version = "0.16.1", optional = true }

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dependencies.num-complex]
version = "0.4"
default-features = false
features = ["libm"]

[dev-dependencies]
ndarray = "0.16.1"
plotters = "0.3.7"
smallvec = "1.13.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[features]
default = ["ndarray", "std"]
ndarray = ["dep:ndarray"]
std = ["num-traits/std", "num-integer/std"]

